# centreon-plugins

./: .gitattributes  .gitignore  .gitleaks.toml  .gitleaksignore  .project  .veracode-exclusions  .version.plugins  CHANGELOG  INSTALL  Jenkinsfile  LICENSE.md  README.md  REQUIREMENT  YES  centreon_plugins.pl  changelog  check_microsens_G7_doc.md  check_microsens_G7_doc.txt  check_microsens_G7_v3.pl  connector.pl  fatpack_build.sh  git stashqq  install.sh  periodic-table.html  perl-Crypt-OpenSSL-AES-0.05-1.el7.x86_64.rpm  sonar-project.properties  suiviproximus.html
.githooks/: pre-commit
.github/: CODEOWNERS  PULL_REQUEST_TEMPLATE.md  dependabot.yml  issue_template.md
as400/: changelog
centreon-plugins/: .gitignore  INSTALL  Jenkinsfile  README.md  REQUIREMENT  centreon_plugins.pl  changelog  install.sh
ci/: .gitignore  Jenkinsfile
cloud/: plugin.pm
contrib/: README.md  check_plugins.pl  cwrapper_perl.c  fatpack_build.sh
doc/: CI.md  test.md
docs/: conf.py  index.rst  user_guide.rst
efs/: plugin.pm
experimental/: Cargo.toml  README.md  TODO.md  test.json
experimental/benches/: bench.rs
experimental/examples/: cpu.json  new-cpu.json  new-cpu.json.example  new-disk.json  new-disk.json.example  new-mem.json
experimental/packaging/: centreon-generic-plugins.yaml
experimental/perl/: with-ffi.pl
experimental/src/: grammar.lalrpop  lib.rs  main.rs
experimental/src/compute/: ast.rs  lexer.rs  mod.rs  threshold.rs
experimental/src/generic/: error.rs  mod.rs
experimental/src/output/: mod.rs
experimental/src/snmp/: mod.rs
src/: centreon.conf  (+61 more)
(+22386 files in other folders)
