[package]
name = "generic-snmp"
version = "1.0.0"

[build-dependencies]
lalrpop = "0.22.1"

[dependencies]
regex = "1.11.1"
rasn = "0.24.0"
rasn-snmp = "0.24.0"
rasn-smi = "0.24.0"
log = "0.4.25"
lexopt = "0.3.0"
serde = { version = "1.0.217", features = ["derive"] }
serde_json = "1.0.138"
lalrpop-util = { version = "0.22.1", features = ["lexer"] }
