[package]
name = "generic-snmp"
version = "1.0.0"

[build-dependencies]
lalrpop = "0.22.1"

[dependencies]
regex = "1.11.1"
rasn = "0.26.2"
rasn-snmp = "0.26.2"
rasn-smi = "0.26.2"
log = "0.4.27"
lexopt = "0.3.1"
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.140"
lalrpop-util = { version = "0.22.1", features = ["lexer"] }
