[package]
name = "generic-snmp"
version = "1.0.0"

[build-dependencies]
lalrpop = "0.22.1"

[dependencies]
env_logger = "0.11.8"
lalrpop-util = { version = "0.22.1", features = ["lexer"] }
lexopt = "0.3.1"
log = "0.4.27"
rasn = "0.26.2"
rasn-smi = "0.26.2"
rasn-snmp = "0.26.2"
regex = "1.11.1"
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.140"
snafu = "0.8.5"
